src/test/ui/libstd-case-typo/fmt.stderr
error[E0412]: cannot find type `Debuglist` in this scope
  --> $DIR/fmt.rs:4:21
   |
LL | fn test_dbglist(_x: Debuglist){}
   |                     ^^^^^^^^^
   |                     |
   |                     not found in this scope
   |                     help: found a std struct with a similar name: `std::fmt::DebugList`

error[E0412]: cannot find type `Debugmap` in this scope
  --> $DIR/fmt.rs:6:20
   |
LL | fn test_dbgmap(_x: Debugmap){}
   |                    ^^^^^^^^
   |                    |
   |                    not found in this scope
   |                    help: found a std struct with a similar name: `std::fmt::DebugMap`

error[E0412]: cannot find type `Debugset` in this scope
  --> $DIR/fmt.rs:8:20
   |
LL | fn test_dbgset(_x: Debugset){}
   |                    ^^^^^^^^
   |                    |
   |                    not found in this scope
   |                    help: found a std struct with a similar name: `std::fmt::DebugSet`

error[E0412]: cannot find type `Debugstruct` in this scope
  --> $DIR/fmt.rs:10:23
   |
LL | fn test_dbgstruct(_x: Debugstruct){}
   |                       ^^^^^^^^^^^
   |                       |
   |                       not found in this scope
   |                       help: found a std struct with a similar name: `std::fmt::DebugStruct`

error[E0412]: cannot find type `Debugtuple` in this scope
  --> $DIR/fmt.rs:12:22
   |
LL | fn test_dbgtuple(_x: Debugtuple){}
   |                      ^^^^^^^^^^
   |                      |
   |                      not found in this scope
   |                      help: found a std struct with a similar name: `std::fmt::DebugTuple`

error[E0412]: cannot find type `formatter` in this scope
  --> $DIR/fmt.rs:14:23
   |
LL | fn test_fmter(mut _x: formatter){}
   |                       ^^^^^^^^^
   |                       |
   |                       not found in this scope
   |                       help: found a std struct with a similar name: `std::fmt::Formatter`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0412`.
